Add JMX Exporter Preset
Signed-off-by: Oliver Bähler <oliverbaehler@hotmail.com>